--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendored/SDL_ttf"]
 	path = vendored/SDL_ttf
 	url = git@github.com:libsdl-org/SDL_ttf.git
+[submodule "vendored/lua"]
+	path = vendored/lua
+	url = git@github.com:walterschell/Lua.git
