--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendored/lua"]
 	path = vendored/lua
 	url = git@github.com:walterschell/Lua.git
+[submodule "vendored/log4cxx"]
+	path = vendored/log4cxx
+	url = git@github.com:apache/logging-log4cxx.git
