--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_subdirectory(vendored/lua EXCLUDE_FROM_ALL)
 
 set(SourceFiles
     src/main.c
+    src/scene-title.c
+    src/scene-game.c
 )
 
 add_executable(${PROJECT_NAME} ${SourceFiles})
