Moving game state init/free to new file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(vendored/lua EXCLUDE_FROM_ALL)
 
 set(SourceFiles
     src/main.c
+    src/game-state.c
     src/scene-title.c
     src/scene-game.c
 )
