--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,14 @@ add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
 add_subdirectory(vendored/SDL_ttf EXCLUDE_FROM_ALL)
 add_subdirectory(vendored/lua EXCLUDE_FROM_ALL)
 
-set(SourceFiles
+set(SOURCE_FILES
     src/main.c
     src/game-state.c
     src/scene-title.c
     src/scene-map.c
 )
 
-add_executable(${PROJECT_NAME} ${SourceFiles})
-target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3 SDL3_ttf::SDL3_ttf lua_static)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+target_link_libraries(
+    ${PROJECT_NAME} PRIVATE SDL3::SDL3 SDL3_ttf::SDL3_ttf lua_static
+)
